--- a/app/src/main/res/layout/filter_search.xml
+++ b/app/src/main/res/layout/filter_search.xml
@@ -387,7 +387,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorPrimary"
                 android:text="Search"
                 android:textColor="#ffffff" />
 
