--- a/app/src/main/res/layout/partial_profile_item.xml
+++ b/app/src/main/res/layout/partial_profile_item.xml
@@ -2,29 +2,33 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:layout_marginTop=".5dp"
-    >
+    android:layout_marginTop=".5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
 
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="2"
-        >
+        android:weightSum="2">
 
         <TextView
             android:id="@+id/item_name"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text=""
+            android:textColor="#4e4c4c"
+            android:textSize="@dimen/item_textsize" />
 
 
         <TextView
             android:id="@+id/item_value"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/item_textsize" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
