--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_notifications"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/default_profile_female_icon"
             android:title="Profile" />
         <item
