--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-
-    android:padding="2dp"
-    android:orientation="vertical">
+    android:layout_height="@dimen/profile_item_cardview_height"
+    android:orientation="vertical"
+    android:padding="@dimen/most_small_padding">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_marginBottom="4dp"
-        android:layout_height="100dp">
+        android:layout_height="@dimen/profile_item_cardview_height"
+        android:layout_marginBottom="@dimen/small_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="1dp"
+            android:layout_height="@dimen/profile_item_cardview_height"
+            android:layout_marginBottom="@dimen/most_small_margin"
             android:orientation="horizontal"
             android:weightSum="5">
 
@@ -23,7 +22,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:padding="10dp"
+                android:padding="@dimen/medium_padding"
                 android:scaleType="fitXY"
                 android:src="@drawable/profile"
                 android:tint="#4b3b3a" />
@@ -33,37 +32,27 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3.5"
                 android:orientation="vertical"
-                android:paddingLeft="5dp"
-                android:paddingRight="2dp"
-               >
+                android:paddingLeft="@dimen/small_padding"
+                android:paddingRight="@dimen/most_small_padding">
 
                 <TextView
                     android:id="@+id/user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="User Name"
+                    android:paddingTop="@dimen/medium_padding"
+                    android:text=""
                     android:textColor="@color/colorPrimary"
-                    android:textSize="18sp" />
-
+                    android:textSize="@dimen/medium_textsize" />
 
 
                 <TextView
                     android:id="@+id/details"
-                    android:gravity="center_vertical"
-
-                    android:textStyle="bold"
-                    android:text="আগুন দেওয়ায় পুলিশ সম্পৃক্ত বলে গণমাধ্যমে আসা খবর যুক্ত করে রিট আবেদনকারীদের"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-
-
-
-
-
-
-
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text=""
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
