--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -3,16 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E0E0E0">
+    android:background="#e9ebed">
 
 
-    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordnatelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/r1"
-        android:fitsSystemWindows="true"
-        tools:context="biyeta.nas.biyeta.Main2Activity">
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -35,12 +34,12 @@
                     android:layout_height="300dp"
                     app:layout_collapseMode="parallax">
 
-                    <ImageView
-                        android:id="@+id/userProfileImage"
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/viewpager"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/profile_pic" />
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -48,29 +47,6 @@
                         android:layout_gravity="start"
                         android:layout_marginTop="@dimen/medium_margin">
 
-                        <!-- <TextView
-                             android:id="@+id/userName"
-                             android:layout_width="wrap_content"
-                             android:layout_height="wrap_content"
-                             android:layout_centerInParent="true"
-                             android:text="user  Name"
-                             android:textColor="#FFFFFF"
-                             android:textSize="@dimen/medium_textsize"
-                             android:textStyle="bold" />
-                         <ImageView
-                             android:id="@+id/backPreviousActivityImage"
-                             android:layout_width="@dimen/small_image_size"
-                             android:layout_height="@dimen/small_image_size"
-                             android:layout_alignParentLeft="true"
-                             android:paddingLeft="@dimen/small_padding"
-                             android:src="@drawable/back_arrow" />
-                         <ImageView
-                             android:id="@+id/likeImage"
-                             android:layout_width="@dimen/small_image_size"
-                             android:layout_height="@dimen/small_image_size"
-                             android:layout_alignParentRight="true"
-                             android:paddingRight="@dimen/small_padding"
-                             android:src="@drawable/favourite" />-->
 
                         <ImageView
                             android:id="@+id/edit_profile_image"
@@ -82,11 +58,59 @@
                             android:gravity="center"
                             android:padding="@dimen/small_padding"
                             android:src="@drawable/editicon"
-                            android:visibility="invisible" />
+                            android:visibility="gone" />
 
                     </RelativeLayout>
 
                 </FrameLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="@dimen/medium_margin"
+                        android:text="hellow world"
+                        android:textColor="#FFFFFF"
+                        android:textSize="@dimen/medium_textsize"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/page1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:src="@android:drawable/arrow_up_float"
+                        android:visibility="visible" />
+
+                    <ImageView
+                        android:id="@+id/page2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:layout_toRightOf="@+id/page1"
+                        android:src="@android:drawable/arrow_up_float"
+                        android:visibility="visible" />
+
+                    <ImageView
+                        android:id="@+id/page3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:layout_toRightOf="@+id/page2"
+                        android:src="@android:drawable/arrow_up_float"
+                        android:visibility="visible" />
+
+
+                </RelativeLayout>
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -107,15 +131,6 @@
                         android:gravity="center"
                         android:padding="@dimen/small_padding">
 
-                        <TextView
-                            android:id="@+id/user_name_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:text="user  Name"
-                            android:textColor="#FFFFFF"
-                            android:textSize="@dimen/medium_textsize"
-                            android:textStyle="bold" />
 
                         <ImageView
                             android:id="@+id/backPreviousActivityImage"
@@ -136,8 +151,6 @@
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
 
-        <!--<include layout="@layout/content_main2" />
-    -->
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -148,7 +161,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ede9e9">
+                android:background="#e9ebed">
 
 
                 <LinearLayout
@@ -172,7 +185,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/medium_height"
                             android:layout_weight="1"
-                            android:background="#BDBDBD"
+                            android:background="#cecece"
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:paddingLeft="15dp"
@@ -295,10 +308,19 @@
                     </LinearLayout>
 
 
-                    <RelativeLayout
+                    <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/medium_margin"
                         android:layout_marginTop="@dimen/medium_margin"
+                        android:text="his/her info"
+                        android:textColor="#4e4c4c"
+                        android:textSize="@dimen/item_textsize"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:background="#FFFFFF">
 
                         <TextView
@@ -306,25 +328,69 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/medium_padding"
-                            android:text=""
+                            android:text="dfadfadfadfasdfasdf"
                             android:textColor="#4e4c4c"
                             android:textSize="@dimen/item_textsize"
                             android:textStyle="bold" />
 
-                    </RelativeLayout>
+                    </android.support.v7.widget.CardView>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/medium_margin"
+                        android:layout_marginTop="@dimen/medium_margin"
+                        android:text="General information"
+                        android:textColor="#4e4c4c"
+                        android:textSize="@dimen/item_textsize"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#FFFFFF">
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/user_details_recycler_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/small_margin"
+                            android:layout_marginRight="@dimen/small_margin"
+                            android:layout_marginTop="@dimen/medium_margin"
+                            android:scrollbars="vertical" />
+
+
+                    </android.support.v7.widget.CardView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/medium_margin"
+                        android:layout_marginTop="@dimen/medium_margin"
+                        android:text="apnar choice r shathe tar mill"
+                        android:textColor="#4e4c4c"
+                        android:textSize="@dimen/item_textsize"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#FFFFFF">
+                        
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/jkljk"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/small_margin"
+                            android:layout_marginRight="@dimen/small_margin"
+                            android:layout_marginTop="@dimen/medium_margin"
+                            android:scrollbars="vertical" />
+
+
+                    </android.support.v7.widget.CardView>
 
                 </LinearLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/user_details_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/detils_info_layout"
-                    android:layout_marginLeft="@dimen/small_margin"
-                    android:layout_marginRight="@dimen/small_margin"
-                    android:layout_marginTop="@dimen/medium_margin"
-                    android:scrollbars="vertical" />
 
 
             </RelativeLayout>
@@ -343,7 +409,6 @@
             android:id="@+id/finalResultBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:background="@color/colorPrimaryDark"
             android:text="পুরো বায়োডাটা দেখার অনুরোধ করুন"
             android:textColor="#FFFFFF"
