--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -3,4 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="1.0">
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="0.5"
+            android:gravity="left"
+            android:src="@mipmap/ic_launcher" />
+
+        <ImageButton
+            android:id="@+id/terminateSeed"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_weight="0.5"
+            android:background="@null"
+            android:gravity="right"
+            android:src="@mipmap/ic_launcher" />
+    </LinearLayout>
+
+
 </RelativeLayout>
