--- a/app/src/main/res/layout/general_information_recylerview_item.xml
+++ b/app/src/main/res/layout/general_information_recylerview_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/title_imageView"
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="35dp"
         android:layout_toRightOf="@+id/title_imageView"
         android:text="title textview vlaue :"
         android:textSize="@dimen/medium_textsize" />
