--- a/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
+++ b/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/small_padding">
 
         <TextView
             android:id="@+id/title_textview"
@@ -29,23 +30,23 @@
 
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginRight="@dimen/medium_margin"
+            android:padding="@dimen/medium_padding"
             android:src="@drawable/match_icon" />
 
 
-        <LinearLayout
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_alignParentBottom="true"
-            android:background="#E0E0E0"
-            android:orientation="vertical"
-            android:visibility="visible" />
-
-
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#E0E0E0"
+        android:orientation="vertical"
+        android:visibility="gone" />
 
 </LinearLayout>
