--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -329,7 +329,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/medium_padding"
-                            android:text="dfadfadfadfasdfasdf"
+                            android:text=""
                             android:textColor="#4e4c4c"
                             android:textSize="@dimen/item_textsize"
                             android:textStyle="bold" />
