--- a/app/src/main/res/layout/inbox.xml
+++ b/app/src/main/res/layout/inbox.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:background="#2E3F51"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
+
         android:layout_height="wrap_content">
 
         <TextView
@@ -20,6 +22,10 @@
             android:background="#2E3F51"
             android:text="@string/sent_request"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -37,6 +43,10 @@
             android:background="#2E3F51"
             android:text="@string/message"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -54,6 +64,10 @@
             android:background="#2E3F51"
             android:text="@string/smile"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
 
     <android.support.v7.widget.CardView
@@ -72,6 +86,10 @@
             android:background="#2E3F51"
             android:text="@string/verification_request"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
 
     <android.support.v7.widget.CardView
@@ -90,6 +108,10 @@
             android:background="#2E3F51"
             android:text="@string/expire_request"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
 
     <android.support.v7.widget.CardView
@@ -108,6 +130,10 @@
             android:background="#2E3F51"
             android:text="@string/trash"/>
     </android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#fff"></TextView>
 
 
 
