--- a/app/src/main/res/layout/general_information_recylerview_item.xml
+++ b/app/src/main/res/layout/general_information_recylerview_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/medium_margin">
 
     <ImageView
         android:id="@+id/title_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/match_icon" />
+        android:src="@drawable/hom" />
 
     <TextView
         android:id="@+id/title_value_textview"
