--- a/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
+++ b/app/src/main/res/layout/match_user_choice_recyclerview_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:layout_marginTop="@dimen/medium_margin"
     android:orientation="vertical">
 
 
@@ -36,7 +37,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginRight="@dimen/medium_margin"
             android:padding="@dimen/medium_padding"
-            android:src="@drawable/match_icon" />
+            android:src="@drawable/match_icon"
+            android:tint="@color/colorPrimaryDark" />
 
 
     </RelativeLayout>
