--- a/app/src/main/res/layout/activity_new_user_profile.xml
+++ b/app/src/main/res/layout/activity_new_user_profile.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginBottom="32dp"
                 app:expandedTitleMarginEnd="64dp"
@@ -39,14 +39,22 @@
                         android:id="@+id/viewpager"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:visibility="gone"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+
+                    <ImageView
+                        android:id="@+id/user_profile_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
-                        android:layout_marginTop="@dimen/medium_margin">
+                        android:layout_marginTop="@dimen/medium_margin"
+                        android:visibility="gone">
 
 
                         <ImageView
@@ -58,8 +66,7 @@
                             android:background="#E6E6FA"
                             android:gravity="center"
                             android:padding="@dimen/small_padding"
-                            android:src="@drawable/editicon"
-                            android:visibility="gone" />
+                            android:src="@drawable/editicon" />
 
                     </RelativeLayout>
 
@@ -88,7 +95,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_centerInParent="true"
                         android:src="@android:drawable/arrow_up_float"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/page2"
@@ -98,7 +105,7 @@
                         android:layout_centerInParent="true"
                         android:layout_toRightOf="@+id/page1"
                         android:src="@android:drawable/arrow_up_float"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/page3"
@@ -108,7 +115,7 @@
                         android:layout_centerInParent="true"
                         android:layout_toRightOf="@+id/page2"
                         android:src="@android:drawable/arrow_up_float"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
 
                 </RelativeLayout>
