--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,9 @@
     <dimen name="profile_item_cardview_height">100dp</dimen>
 
 
+    <dimen name="viewer_image_size">100dp</dimen>
+    <dimen name="match_button_height">30dp</dimen>
+    <dimen name="match_text_size">150dp</dimen>
+
+
 </resources>
