--- a/app/src/main/res/layout/activity_send_request.xml
+++ b/app/src/main/res/layout/activity_send_request.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="#fff"
     android:orientation="vertical"
-    tools:context=".activity.SendRequestActivity">
+    tools:context=".activity.SendRequestActivity"
+    android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
